Add second backgroung image, and About Us paragraph without styling

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="static/assets/backgrounds/h_img.jpg" alt="Backgroung image"
+      <img src="static/assets/backgrounds/h_img.jpg" alt="Background image"
       width="120%">
       <div class="centered">
         <img src="static/assets/logo/logo.png" alt="Delani Logo"><p>WELCOME<br>
@@ -16,14 +16,24 @@
           <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS
           IN A FUN ENVIRONMENT</p>
         </div>
-
         <img src="static/assets/mouse_click.png" alt="Mouse Icon">
       </div>
-
-
-
     </div>
 
+    <h2>ABOUT US</h2>
+    <p>When you work with us, you are part of a team of commited
+      collaborators. All aspects of our software development process are intergrated,
+      interactive <br> and agile.<br>
+      Our approach unifies design, development and product management to create
+      exceptional products. <br>
+      We start each project by understanding your business goals, the user's needs
+      and the product requirements <br>
+      Then we help translate them into effective and elegant solutions.
+    </p>
+
+    <div class="">
+      <img src="static/assets/backgrounds/s_image.jpg" alt="laptop background image" height="350">
+    </div>
 
   </body>
 </html>
