--- a/index.html
+++ b/index.html
@@ -20,20 +20,39 @@
       </div>
     </div>
 
-    <h2>ABOUT US</h2>
-    <p>When you work with us, you are part of a team of commited
-      collaborators. All aspects of our software development process are intergrated,
-      interactive <br> and agile.<br>
-      Our approach unifies design, development and product management to create
-      exceptional products. <br>
-      We start each project by understanding your business goals, the user's needs
-      and the product requirements <br>
-      Then we help translate them into effective and elegant solutions.
-    </p>
-
-    <div class="">
+    <div class="about">
+      <h2>ABOUT US</h2>
+      <p>When you work with us, you are part of a team of commited
+        collaborators. All aspects of our software development process are intergrated,
+        interactive <br> and agile.<br>
+        Our approach unifies design, development and product management to create
+        exceptional products. <br>
+        We start each project by understanding your business goals, the user's needs
+        and the product requirements <br>
+        Then we help translate them into effective and elegant solutions.
+      </p>
+    </div>
+<br>
+    <div class="container2">
       <img src="static/assets/backgrounds/s_image.jpg" alt="laptop background image" height="350">
+        <div class="centered">
+          <p>SERVICES</p>
+          <p>Before we sign a contract or write a  line of code our team will spend
+          the necessary time needed to understand you product vision <br>
+          The outcome of this scoping session is a proposal or high-level statemnt of
+          work. <br>
+          based on your requirements, we can provide a complete offering or just the pieces
+          you need.</p>
+        </div>
     </div>
 
+    <div class="services">
+      <ul id="services">
+        <li> <img src="static/assets/services_icons/design_icon.png" alt="design icon">DESIGN</li>
+        <li> <img src="static/assets/services_icons/dev_icon.png" alt="dev icon">DEVELOPMENT</li>
+        <li> <img src="static/assets/services_icons/product_icon.png" alt="product icon">PRODUCT MANAGEMENT</li>
+      </ul>
+
+    </div>
   </body>
 </html>
