Add portfolio images, add contact us background image, form for collecting Name, email address and Message, Add social media icons sans links

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
+<!--Container 1, First Background -->
     <div class="container">
       <img src="static/assets/backgrounds/h_img.jpg" alt="Background image"
       width="120%">
@@ -20,6 +21,7 @@
       </div>
     </div>
 
+<!--About Section-->
     <div class="about">
       <h2>ABOUT US</h2>
       <p>When you work with us, you are part of a team of commited
@@ -33,6 +35,8 @@
       </p>
     </div>
 <br>
+
+<!--Services background image-->
     <div class="container2">
       <img src="static/assets/backgrounds/s_image.jpg" alt="laptop background image" height="350">
         <div class="centered">
@@ -46,6 +50,7 @@
         </div>
     </div>
 
+<!--What we do-->
     <div class="services">
       <ul id="services">
         <li> <img src="static/assets/services_icons/design_icon.png" alt="design icon">DESIGN</li>
@@ -54,5 +59,53 @@
       </ul>
 
     </div>
+
+<!--Portfolio-->
+    <div class="portfolio">
+      <ul id="portfolio">
+        <li> <img src="static/assets/portfolio/work4.jpg" alt=""> </li>
+        <li> <img src="static/assets/portfolio/work3.jpg" alt=""> </li>
+        <li> <img src="static/assets/portfolio/work2.jpg" alt=""> </li>
+        <li> <img src="static/assets/portfolio/work1.jpg" alt=""> </li>
+        <li> <img src="static/assets/portfolio/work5.jpg" alt=""> </li>
+        <li> <img src="static/assets/portfolio/work6.jpg" alt=""> </li>
+        <li> <img src="static/assets/portfolio/work7.jpg" alt=""> </li>
+        <li> <img src="static/assets/portfolio/work8.jpg" alt=""> </li>
+      </ul>
+    </div>
+
+<!--Contact Us-->
+    <div class="contact">
+      <img src="static/assets/backgrounds/c_image.jpg" alt="background image">
+        <div class="centered">
+          <form>
+           <label for="name">Name...</label>
+           <input type="text" id="name" name="name">
+           <label for="email">Email...</label>
+           <input type="email" id="email" name="email">
+         </form>
+         <textarea name="comment" form="usrform">Your message here...</textarea>
+
+        </div>
+
+    </div>
+
+
+<!--Social Media Icons-->
+    <div class="social">
+      <ul id="social">
+        <li> <img src="static/assets/social_icons/twitter.png" alt=""> </li>
+        <li> <img src="static/assets/social_icons/dribble.png" alt=""> </li>
+        <li> <img src="static/assets/social_icons/facebook.png" alt=""> </li>
+        <li> <img src="static/assets/social_icons/g_plus.png" alt=""> </li>
+        <li> <img src="static/assets/social_icons/skype.png" alt=""> </li>
+        <li> <img src="static/assets/social_icons/stumble_upon.png" alt=""> </li>
+        <li> <img src="static/assets/social_icons/behance.png" alt=""> </li>
+        <li> <img src="static/assets/social_icons/pinterest.png" alt=""> </li>
+        <li> <img src="static/assets/social_icons/flickr.png" alt=""> </li>
+      </ul>
+    </div>
+
+
   </body>
 </html>
