--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
       <h2>ABOUT US</h2>
             <p>When you work with us, you are part of a team of commited
           collaborators. All aspects of our software development process are intergrated,
-          interactive <br> and agile.<br></p>
+          interactive <br> and agile.</p>
         <p>Our approach unifies design, development and product management to create
-          exceptional products.</p> <br>
+          exceptional products.</p>
         <p>We start each project by understanding your business goals, the user's needs
-          and the product requirements</p><br>
+          and the product requirements</p>
         <p>Then we help translate them into effective and elegant solutions.</p>
         </p>
     </div>
@@ -43,7 +43,7 @@
     <div class="container2">
       <img src="static/assets/backgrounds/s_image.jpg" alt="laptop background image" height="350" width="100%">
         <div class="centered">
-          <p>SERVICES</p>
+          <h2>SERVICES</h2>
           <p>Before we sign a contract or write a  line of code our team will spend
           the necessary time needed to understand you product vision <br>
           The outcome of this scoping session is a proposal or high-level statemnt of
@@ -103,13 +103,11 @@
 <!--Portfolio-->
     <div class="portfolio">
       <h2>PORTFOLIO</h2>
-      <ul id="portfolio1">
+      <ul>
         <li> <img src="static/assets/portfolio/work4.jpg" alt=""> </li>
         <li> <img src="static/assets/portfolio/work3.jpg" alt=""> </li>
         <li> <img src="static/assets/portfolio/work2.jpg" alt=""> </li>
         <li> <img src="static/assets/portfolio/work1.jpg" alt=""> </li>
-      </ul>
-      <ul id="portfolio2">
         <li> <img src="static/assets/portfolio/work5.jpg" alt=""> </li>
         <li> <img src="static/assets/portfolio/work6.jpg" alt=""> </li>
         <li> <img src="static/assets/portfolio/work7.jpg" alt=""> </li>
