Create hover effect on the individual portfolio project icons

--- a/index.html
+++ b/index.html
@@ -100,18 +100,78 @@
 
 
 
-<!--Portfolio-->
+<!--Portfolio Projects-->
     <div class="portfolio">
       <h2>PORTFOLIO</h2>
       <ul>
-        <li> <img src="static/assets/portfolio/work4.jpg" alt=""> </li>
-        <li> <img src="static/assets/portfolio/work3.jpg" alt=""> </li>
-        <li> <img src="static/assets/portfolio/work2.jpg" alt=""> </li>
-        <li> <img src="static/assets/portfolio/work1.jpg" alt=""> </li>
-        <li> <img src="static/assets/portfolio/work5.jpg" alt=""> </li>
-        <li> <img src="static/assets/portfolio/work6.jpg" alt=""> </li>
-        <li> <img src="static/assets/portfolio/work7.jpg" alt=""> </li>
-        <li> <img src="static/assets/portfolio/work8.jpg" alt=""> </li>
+        <li>
+          <div class="container"> <img src="static/assets/portfolio/work4.jpg"
+            alt="Project Blue" class="image" style="width:100%">
+            <div class="middle">
+              <div class="text">Blue Logo</div>
+            </div>
+          </div>
+        </li>
+
+        <li>
+          <div class="container"> <img src="static/assets/portfolio/work3.jpg"
+            alt="Project Blue" class="image" style="width:100%">
+            <div class="middle">
+              <div class="text">Ontario Security</div>
+            </div>
+          </div>
+
+       </li>
+
+        <li>
+          <div class="container"> <img src="static/assets/portfolio/work2.jpg"
+            alt="Project Blue" class="image" style="width:100%">
+            <div class="middle">
+              <div class="text">Fiery Orange</div>
+            </div>
+          </div>
+        </li>
+
+        <li>
+          <div class="container"> <img src="static/assets/portfolio/work1.jpg"
+            alt="Project Blue" class="image" style="width:100%">
+          <div class="middle">
+            <div class="text">Dark Theme</div>
+          </div>
+        </div>
+      </li>
+
+        <li>
+            <div class="container"> <img src="static/assets/portfolio/work5.jpg"
+              alt="Project Blue" class="image" style="width:100%">
+              <div class="middle">
+                <div class="text">Elena</div>
+              </div>
+          </div>
+        </li>
+
+        <li> <div class="container"> <img src="static/assets/portfolio/work6.jpg"
+          alt="Project Blue" class="image" style="width:100%">
+          <div class="middle">
+            <div class="text">Survey Site</div>
+          </div>
+        </div>
+       </li>
+
+        <li> <div class="container"> <img src="static/assets/portfolio/work7.jpg"
+          alt="Project Blue" class="image" style="width:100%">
+          <div class="middle">
+            <div class="text">Burned</div>
+          </div>
+        </div>
+       </li>
+        <li> <div class="container"> <img src="static/assets/portfolio/work8.jpg"
+          alt="Project Blue" class="image" style="width:100%">
+          <div class="middle">
+            <div class="text">Giraffe Restaurant</div>
+          </div>
+        </div>
+      </li>
       </ul>
     </div>
 
