--- a/index.html
+++ b/index.html
@@ -120,7 +120,6 @@
               <div class="text">Ontario Security</div>
             </div>
           </div>
-
        </li>
 
         <li>
@@ -140,7 +139,9 @@
           </div>
         </div>
       </li>
+    </ul>
 
+    <ul>
         <li>
             <div class="container"> <img src="static/assets/portfolio/work5.jpg"
               alt="Project Blue" class="image" style="width:100%">
@@ -179,13 +180,13 @@
     <div class="contact">
       <img src="static/assets/backgrounds/c_image.jpg" alt="background image">
         <div class="centered">
-          <form>
+          <form action="#" id="clientForm" method="post" name="clientForm">
            <label for="name">Name...</label>
-           <input type="text" id="name" name="name">
+           <input type="text" id="name" name="name"> <br>
            <label for="email">Email...</label>
            <input type="email" id="email" name="email">
-         </form>
-         <textarea name="comment" form="usrform">Your message here...</textarea>
+         </form> <br>
+         <textarea class="textarea" id="message">Your message here...</textarea>
 
         </div>
 
@@ -194,7 +195,7 @@
 
 <!--Social Media Icons-->
     <div class="social">
-      <ul id="social">
+      <ul>
         <li> <img src="static/assets/social_icons/twitter.png" alt=""> </li>
         <li> <img src="static/assets/social_icons/dribble.png" alt=""> </li>
         <li> <img src="static/assets/social_icons/facebook.png" alt=""> </li>
