Function for collecting emails and messages.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Delani Studio</title>
     <link rel="stylesheet" href="/css/bootsrap.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
 <!--Container 1, First Background -->
@@ -53,17 +53,6 @@
         </div>
     </div>
 
-<!--What we do-->
-
-  <!-- Tried horizontal list approach
-    <div class="services">
-      <ul id="services">
-        <li> <img src="static/assets/services_icons/design_icon.png" alt="design icon">DESIGN</li>
-        <li> <img src="static/assets/services_icons/dev_icon.png" alt="dev icon">DEVELOPMENT</li>
-        <li> <img src="static/assets/services_icons/product_icon.png" alt="product icon">PRODUCT MANAGEMENT</li>
-      </ul>
-    </div>
-  -->
   <div class="services">
      <h2>WHAT WE DO</h2>
      <br>
