--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h2>ABOUT US</h2>
             <p>When you work with us, you are part of a team of commited
           collaborators. All aspects of our software development process are intergrated,
-          interactive <br> and agile.</p>
+          interactive and agile.</p>
         <p>Our approach unifies design, development and product management to create
           exceptional products.</p>
         <p>We start each project by understanding your business goals, the user's needs
