Enlarge text area

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
            <label for="email">Email...</label>
            <input type="email" id="email" name="email">
          </form> <br>
-         <textarea class="textarea" id="message">Your message here...</textarea>
+         <textarea class="textarea" id="message" rows="20" cols="60">Your message here...</textarea>
 
         </div>
 
