--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <title>Delani Studio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet"  href="//cdn-images.mailchimp.com/embedcode/classic-10 7.css" type="text/css" >
     <link rel="stylesheet" href="/css/bootsrap.css">
     <link rel="stylesheet" href="./css/style.css">
+
   </head>
   <body>
 <!--Container 1, First Background -->
@@ -168,19 +170,39 @@
     </div>
 
 <!--Contact Us-->
-    <div class="contact">
+    <div class="contact" id="mc_embed_signup">
       <img src="static/assets/backgrounds/c_image.jpg" alt="background image">
-        <div class="centered">
-          <form action="#" id="clientForm" method="post" name="clientForm">
-           <label for="name">Name...</label>
-           <input type="text" id="name" name="name"> <br>
-           <label for="email">Email...</label>
-           <input type="email" id="email" name="email">
-         </form> <br>
-         <textarea class="textarea" id="message" rows="20" cols="60">Your message here...</textarea>
-
-        </div>
-
+      <!-- Begin Mailchimp Signup Form -->
+    <div class="centered" id="mc_embed_signup">
+      <form action="https://gmail.us7.list-manage.com/subscribe/post?u=afaca4566bdefcf8f971b9e1d&amp;id=7b847d6757" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div id="mc_embed_signup_scroll">
+      	<h2>Subscribe</h2>
+      <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+      <div class="mc-field-group">
+      	<label for="mce-NAME">Name  <span class="asterisk">*</span>
+      </label>
+      	<input type="text" value="" name="NAME" class="required" id="mce-NAME">
+      </div>
+      <div class="mc-field-group">
+      	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+      </label>
+      	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+      </div>
+      <div class="mc-field-group">
+      	<label for="mce-MESSAGE">Your Message Here </label>
+      	<input type="text" value="" name="MESSAGE" class="" id="mce-MESSAGE">
+      </div>
+      	<div id="mce-responses" class="clear">
+      		<div class="response" id="mce-error-response" style="display:none"></div>
+      		<div class="response" id="mce-success-response" style="display:none"></div>
+      	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_afaca4566bdefcf8f971b9e1d_7b847d6757" tabindex="-1" value=""></div>
+          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+          </div>
+      </form>
+    </div>
+  <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='NAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='MESSAGE';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+  <!--End mc_embed_signup-->
     </div>
 
 
@@ -207,3 +229,6 @@
   </body>
   <script src="js/script.js" charset="utf-8"></script>
 </html>
+
+
+<!-- Begin Mailchimp Signup Form -->
