--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
      <br>
      <div class="box">
        <!-- design icon -->
-       <div class="design">
+       <div class="aboutDesign">
          <img src="static/assets/services_icons/design_icon.png" alt="design icon" onclick="showDesign()">
          <p>DESIGN</p>
          <div id="design">
@@ -71,7 +71,7 @@
          </div>
        </div>
        <!-- dev icon       -->
-       <div class="development">
+       <div class="aboutDevelopment">
          <img src="static/assets/services_icons/dev_icon.png" alt="development icon" onclick="showDevelopment()">
          <p>DEVELOPMENT</p>
          <div id="development">
@@ -80,7 +80,7 @@
          </div>
        </div>
        <!-- product icon -->
-       <div class="production">
+       <div class="aboutProduction">
          <img src="static/assets/services_icons/product_icon.png" alt="product icon" onclick="showProduct()">
          <p>PRODUCT MANAGEMENT</p>
          <div id="product">
@@ -175,29 +175,28 @@
       <!-- Begin Mailchimp Signup Form -->
     <div class="centered" id="mc_embed_signup">
       <form action="https://gmail.us7.list-manage.com/subscribe/post?u=afaca4566bdefcf8f971b9e1d&amp;id=7b847d6757" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-          <div id="mc_embed_signup_scroll">
-      	<h2>Subscribe</h2>
-      <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-      <div class="mc-field-group">
-      	<label for="mce-NAME">Name  <span class="asterisk">*</span>
-      </label>
-      	<input type="text" value="" name="NAME" class="required" id="mce-NAME">
-      </div>
-      <div class="mc-field-group">
-      	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-      </label>
-      	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-      </div>
-      <div class="mc-field-group">
-      	<label for="mce-MESSAGE">Your Message Here </label>
-      	<input type="text" value="" name="MESSAGE" class="" id="mce-MESSAGE">
-      </div>
-      	<div id="mce-responses" class="clear">
-      		<div class="response" id="mce-error-response" style="display:none"></div>
-      		<div class="response" id="mce-success-response" style="display:none"></div>
-      	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_afaca4566bdefcf8f971b9e1d_7b847d6757" tabindex="-1" value=""></div>
-          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+        <div id="mc_embed_signup_scroll">
+          <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+          <div class="mc-field-group">
+          	<label for="mce-NAME">Name  <span class="asterisk">*</span>
+          </label>
+          	<input type="text" value="" name="NAME" class="required" id="mce-NAME">
+          </div>
+          <div class="mc-field-group">
+          	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+          </label>
+          	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+          </div>
+          <div class="mc-field-group">
+          	<label for="mce-MESSAGE">Your Message Here </label>
+          	<input type="text" value="" name="MESSAGE" class="" id="mce-MESSAGE">
+          </div>
+          	<div id="mce-responses" class="clear">
+          		<div class="response" id="mce-error-response" style="display:none"></div>
+          		<div class="response" id="mce-success-response" style="display:none"></div>
+          	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_afaca4566bdefcf8f971b9e1d_7b847d6757" tabindex="-1" value=""></div>
+              <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
           </div>
       </form>
     </div>
