Adjust background image size for contact section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
        <div class="aboutDesign">
          <img src="static/assets/services_icons/design_icon.png" alt="design icon" onclick="showDesign()">
          <p>DESIGN</p>
-         <div id="design">
+         <div id="design" onclick="showDesign()">
            <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.</p>
            <p>Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
          </div>
@@ -171,7 +171,7 @@
 
 <!--Contact Us-->
     <div class="contact" id="mc_embed_signup">
-      <img src="static/assets/backgrounds/c_image.jpg" alt="background image">
+      <img src="static/assets/backgrounds/c_image.jpg" alt="background image" width="100%">
       <!-- Begin Mailchimp Signup Form -->
     <div class="centered" id="mc_embed_signup">
       <form action="https://gmail.us7.list-manage.com/subscribe/post?u=afaca4566bdefcf8f971b9e1d&amp;id=7b847d6757" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
