--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           IN A FUN ENVIRONMENT</p>
         </div>
         <br>
-        <img class="bottom-center"src="static/assets/mouse_click.png" alt="Mouse Icon">
+        <img class="mouse"src="static/assets/mouse_click.png" alt="Mouse Icon">
       </div>
     </div>
 
@@ -50,15 +50,15 @@
         <div class="centered">
           <h2>SERVICES</h2>
           <p>Before we sign a contract or write a  line of code our team will spend
-          the necessary time needed to understand you product vision <br>
-          The outcome of this scoping session is a proposal or high-level statemnt of
-          work. <br>
-          based on your requirements, we can provide a complete offering or just the pieces
+          the necessary time needed to understand you product vision</p>
+          <p>The outcome of this scoping session is a proposal or high-level statement of
+          work. </p>
+          <p>Based on your requirements, we can provide a complete offering or just the pieces
           you need.</p>
         </div>
     </div>
 
-  <div class="services">
+  <div class="services_icons">
      <h2>WHAT WE DO</h2>
      <br>
      <div class="box">
@@ -180,39 +180,19 @@
     </div>
 
 <!--Contact Us-->
-    <div class="contact" id="mc_embed_signup">
-      <img src="static/assets/backgrounds/c_image.jpg" alt="background image" width="100%">
-      <!-- Begin Mailchimp Signup Form -->
-    <div class="centered" id="mc_embed_signup">
-      <form action="https://gmail.us7.list-manage.com/subscribe/post?u=afaca4566bdefcf8f971b9e1d&amp;id=7b847d6757" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-        <div id="mc_embed_signup_scroll">
-          <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-          <div class="mc-field-group">
-          	<label for="mce-NAME">Name  <span class="asterisk">*</span>
-          </label>
-          	<input type="text" value="" name="NAME" class="required" id="mce-NAME">
-          </div>
-          <div class="mc-field-group">
-          	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-          </label>
-          	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-          </div>
-          <div class="mc-field-group">
-          	<label for="mce-MESSAGE">Your Message Here </label>
-          	<input type="text" value="" name="MESSAGE" class="" id="mce-MESSAGE">
-          </div>
-          	<div id="mce-responses" class="clear">
-          		<div class="response" id="mce-error-response" style="display:none"></div>
-          		<div class="response" id="mce-success-response" style="display:none"></div>
-          	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_afaca4566bdefcf8f971b9e1d_7b847d6757" tabindex="-1" value=""></div>
-              <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-          </div>
+<div class="contact-section">
+      <h2>CONTACT US</h2>
+      <form id="clientForm">
+        <label for="fname"></label>
+        <input type="text" id="name" name="fname" placeholder="Name...">
+        <label for="email"></label>
+        <input type="email" id="email" name="email" placeholder="Email...">
       </form>
-    </div>
-  <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='NAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email';fnames[2]='MESSAGE';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-  <!--End mc_embed_signup-->
-    </div>
+      <textarea id="message" name="message" rows="12" cols="70" placeholder="Your message here">
+      </textarea>
+
+</div>
+
 
 
 <!--Social Media Icons-->
@@ -238,6 +218,3 @@
   </body>
   <script type="text/javascript" src="./js/script.js" charset="utf-8"></script>
 </html>
-
-
-<!-- Begin Mailchimp Signup Form -->
